[gd_scene load_steps=10 format=3 uid="uid://bypqyqj801t3t"]

[ext_resource type="Script" uid="uid://cg64rd7p4dvvn" path="res://fire_totem.gd" id="1_t75ro"]
[ext_resource type="TileSet" uid="uid://ds0uihgbfxlmd" path="res://scenes/worldTileSet.tres" id="1_v5kjw"]
[ext_resource type="Texture2D" uid="uid://0lm2j5bf6nhu" path="res://assests/arrow animations/Fire_Spreadsheet.png" id="3_bl07y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0li3"]
size = Vector2(67, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_mys7k"]
atlas = ExtResource("3_bl07y")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfn8w"]
atlas = ExtResource("3_bl07y")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rp2f"]
atlas = ExtResource("3_bl07y")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5dkg"]
atlas = ExtResource("3_bl07y")
region = Rect2(512, 512, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_go6aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mys7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfn8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rp2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5dkg")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}]

[node name="FireTotem" type="Area2D"]
z_index = -1
script = ExtResource("1_t75ro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8.5, -30.5)
shape = SubResource("RectangleShape2D_q0li3")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 5, 0, 4, 0, 0, 0, 0, 0, 255, 255, 1, 0, 1, 0, 7, 0, 0, 0)
tile_set = ExtResource("1_v5kjw")

[node name="fire_totem_AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(9, -29)
scale = Vector2(0.05, 0.044)
sprite_frames = SubResource("SpriteFrames_go6aa")
animation = &"fire"
autoplay = "fire"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
